--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-	"name": "design.slipyme.com",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"format": "prettier --write .",
-		"postbuild": "next-sitemap --config sitemap.config.js",
-		"format:watch": "onchange . -- prettier --write {{changed}}"
-	},
-	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.29.0",
-		"autoprefixer": "^10.4.7",
-		"classnames": "^2.3.1",
-		"eslint-plugin-react": "^7.30.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"next": "12.1.6",
-		"next-compose-plugins": "^2.2.1",
-		"next-images": "^1.8.4",
-		"next-seo": "^5.4.0",
-		"next-sitemap": "^3.1.6",
-		"postcss": "^8.4.14",
-		"prettier": "^2.7.1",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-icons": "^4.4.0",
-		"react-toastify": "^9.0.5",
-		"react-use": "^17.4.0",
-		"sass": "^1.53.0",
-		"tailwindcss": "^3.1.4",
-		"typescript-eslint": "^0.0.1-alpha.0"
-	},
-	"devDependencies": {
-		"@types/node": "18.0.0",
-		"@types/react": "18.0.14",
-		"@types/react-dom": "18.0.5",
-		"eslint": "^8.18.0",
-		"eslint-config-next": "^12.1.6",
-		"typescript": "4.7.4"
-	}
+  "name": "design.slipyme.com",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "taze": "taze major -w",
+    "postbuild": "next-sitemap --config sitemap.config.js",
+    "format:watch": "onchange . -- prettier --write {{changed}}"
+  },
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "classnames": "^2.5.1",
+    "next": "14.0.4",
+    "next-images": "^1.8.5",
+    "next-seo": "^6.5.0",
+    "next-sitemap": "^4.2.3",
+    "next-themes": "^0.3.0",
+    "prettier": "^3.3.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
+    "react-use": "^17.5.0",
+    "sass": "^1.77.6",
+    "taze": "^0.14.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3"
+  }
 }
